--- a/gb/19/12/23/n11739745.md
+++ b/gb/19/12/23/n11739745.md
@@ -1,62 +1,68 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/synhl2788/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/synhl2788/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>Ïû·ÀÔ±ÒÑÆ£±¹²»¿° Ê¥µ®½ÚÈÔÐè±³¸ºÃð»ðÖØÈÎ</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2013/10/1310240552431732-600x400.jpg" />
-<h6>½ñÄêÐÂÖÝÃæÁÙ×ÅÇ°ËùÎ´ÓÐµÄÉ½»ðÌôÕ½£¬ÒÑÆ£¾ë²»¿°µÄÏû·ÀÔ±ÔÚÊ¥µ®½ÚÆÚ¼ä»¹µÃ×ö´óÁ¿¹¤×÷£¬¾¡¿ÉÄÜÈ·±£ÉçÇøÔÚ½ÚÈÕÆÚ¼äµÄ°²È«¡££¨WILLIAM WEST/AFP/Getty Images£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>æ¶ˆé˜²å‘˜å·²ç–²æƒ«ä¸å ª åœ£è¯žèŠ‚ä»éœ€èƒŒè´Ÿç­ç«é‡ä»»</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2013/10/1310240552431732-600x400.jpg" />
+<h6>ä»Šå¹´æ–°å·žé¢ä¸´ç€å‰æ‰€æœªæœ‰çš„å±±ç«æŒ‘æˆ˜ï¼Œå·²ç–²å€¦ä¸å ªçš„æ¶ˆé˜²å‘˜åœ¨åœ£è¯žèŠ‚æœŸé—´è¿˜å¾—åšå¤§é‡å·¥ä½œï¼Œå°½å¯èƒ½ç¡®ä¿ç¤¾åŒºåœ¨èŠ‚æ—¥æœŸé—´çš„å®‰å…¨ã€‚ï¼ˆWILLIAM WEST/AFP/Getty Imagesï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê12ÔÂ23ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÌìî£<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md">°ÄÖÞ</a>Ï¤Äá×ÛºÏ±¨µ¼£©ÉÏÖÜÁùÒÔÀ´£¬ÐÂÖÝ100¶à¶°½¨Öþ±»<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E5%B1%B1%E7%81%AB.md">É½»ð</a>·Ù»Ù¡£Ê¥µ®½ÚÆÚ¼ä£¬ÒÑ¾­Æ£¾ë²»¿°µÄ<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E5%91%98.md">Ïû·ÀÔ±</a>»¹µÃ×ö´óÁ¿¹¤×÷£¬³Ã×Å±¾ÖÜÁ¹Ë¬µÄÌìÆø<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E6%8E%A7%E5%88%B6%E7%81%AB%E5%8A%BF.md">¿ØÖÆ»ðÊÆ</a>£¬¾¡¿ÉÄÜÈ·±£ÉçÇøÔÚ½ÚÈÕÆÚ¼äµÄ°²È«¡£</p>
-<p>ÐÂÖÝÏç´åÏû·À¾Ö£¨RFS NSW£©¾Ö³¤·Æ´ÄÎ÷ÃÉË¹£¨Shane Fitzsimmons£©Ëµ£¬<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E5%91%98.md">Ïû·ÀÔ±</a>ÕýÔÚÀ¶É½ºÍÏ¤ÄáÎ÷±±²¿½øÐÐ´óÁ¿¼õÔÖÉÕ»Ä£¬Ï£ÍûÀûÓÃ±¾ÖÜÁ¹Ë¬ÌìÆøµÄÓÅÊÆÀ´Ñ¹ÖÆ»ðÊÆ¡£¡°ÌØ±ðÊÇÊ¥µ®½ÚºÍÐÂÄêÆÚ¼ä£¬Ïû·ÀÔ±ÃÇÐèÒª½øÐÐ¸ü¶àÖØÒª¹¤×÷£¬¾¡¿ÉÄÜ¸üºÃµØ±£»¤£¨ÉçÇø£©¡£¡±</p>
-<p>½ñÄê<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E5%B1%B1%E7%81%AB.md">É½»ð</a>¼¾£¬ÐÂÖÝÃæÁÙ×ÅÇ°ËùÎ´ÓÐµÄÑÏÖØÌôÕ½¡£½ØÖ¹µ½Ä¿Ç°£¬ÒÑ¾­ÓÐ900¶°·¿ÎÝ±»ÉÕ»Ù£¬ÊýÇ§¶°»§Íâ½¨Öþ·Ù»Ù»òÊÜËð£¬7ÈËËÀÍö¡£</p>
-<p>±»ÉÕ»ÙµÄÁÖµØÓÐÐí¶àÊÇ¿¼À­µÄÆÜÏ¢µØ£¬¾Ý¹À¼ÆÈ«°ÄÒÑ¾­ÓÐ2000Ö»¿¼À­ÔáÉí»ðº£¡£</p>
-<p>ÉÏÖÜÁùµÄ¸ßÎÂ´ó·çÌìÆøÏÂ£¬ÐÂÖÝ´´¼ÍÂ¼µØÅÉ³öÁË1ÍòÃûÏû·ÀÔ±Ãð»ð¡£</p>
-<p>·Æ´ÄÎ÷ÃÉË¹±íÊ¾£¬Ïû·ÀÔ±ÃÇ¡°¾ø¶ÔÒÑ¾­Æ£±¹²»¿°ÁË¡±£¬ËûÃÇÕýÔÚ×ö·Ç³£ÁË²»ÆðµÄ¹¤×÷¡£¡°ËûÃÇµÄÆ£±¹²»½öÊÇÔÚÌåÁ¦ÉÏ£¬»¹ÓÐ¸ÐÇéÉÏ¡£µ«ËûÃÇÖªµÀËûÃÇµÄÉçÇøÕýÔâµ½ÍþÐ²£¬ËûÃÇ»á¾¡Ò»ÇÐÅ¬Á¦¡£¡±</p>
-<p>ÉÏÖÜËÄÎçÒ¹£¬Ò»Á¾Ïû·À³µÔÚ¸ÏÍù»ð³¡Ç°ÏßµÄÂ·ÉÏ±»µ¹ÏÂµÄ´óÊ÷ÔÒÖÐ£¬µ¼ÖÂÁ½ÃûÖ¾Ô¸Ïû·ÀÔ±µ±³¡ÉíÍö¡£</p>
-<p>¼ÓÄÃ´óºÍÃÀ¹úµÄÏû·ÀÔ±ÒÑ¾­ÔÚÉÏÖÜÄ©¸ÏÀ´ÖúÕó¡£</p>
-<p>Ä¿Ç°£¬ÐÂÖÝÈÔÓÐ110Óà´¦É½»ðÔÚÈ¼ÉÕ£¬ÆäÖÐ½ü60¸öÉ½»ðµã´¦ÓÚÊ§¿Ø×´Ì¬¡£</p>
-<p>ËäÈ»±¾ÖÜÌìÆø×ªÁ¹£¬µ«´Ó³¤ÆÚÀ´¿´ÐÂÖÝµÄÇé¿ö²¢²»ÀÖ¹Û£¬ÒòÎªÆøÏó¾ÖÔ¤¼ÆÖ±µ½Ã÷Äê1ÔÂºÍ2ÔÂÇ°£¬²»»á·¢Éú¶Ô»ðÇéÓÐ°ïÖúµÄ½µÓê¡£</p>
-<p>ÔðÈÎ±à¼­£ºÈðÄ¾ÔÃ</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´12æœˆ23æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…å¤©ç¿<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">æ¾³æ´²</a>æ‚‰å°¼ç»¼åˆæŠ¥å¯¼ï¼‰ä¸Šå‘¨å…­ä»¥æ¥ï¼Œæ–°å·ž100å¤šæ ‹å»ºç­‘è¢«<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%B1%B1%E7%81%AB.md#1">å±±ç«</a>ç„šæ¯ã€‚åœ£è¯žèŠ‚æœŸé—´ï¼Œå·²ç»ç–²å€¦ä¸å ªçš„<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E5%91%98.md#1">æ¶ˆé˜²å‘˜</a>è¿˜å¾—åšå¤§é‡å·¥ä½œï¼Œè¶ç€æœ¬å‘¨å‡‰çˆ½çš„å¤©æ°”<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%8E%A7%E5%88%B6%E7%81%AB%E5%8A%BF.md#1">æŽ§åˆ¶ç«åŠ¿</a>ï¼Œå°½å¯èƒ½ç¡®ä¿ç¤¾åŒºåœ¨èŠ‚æ—¥æœŸé—´çš„å®‰å…¨ã€‚</p>
+<p>æ–°å·žä¹¡æ‘æ¶ˆé˜²å±€ï¼ˆRFS NSWï¼‰å±€é•¿è²èŒ¨è¥¿è’™æ–¯ï¼ˆShane Fitzsimmonsï¼‰è¯´ï¼Œ<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E5%91%98.md#1">æ¶ˆé˜²å‘˜</a>æ­£åœ¨è“å±±å’Œæ‚‰å°¼è¥¿åŒ—éƒ¨è¿›è¡Œå¤§é‡å‡ç¾çƒ§è’ï¼Œå¸Œæœ›åˆ©ç”¨æœ¬å‘¨å‡‰çˆ½å¤©æ°”çš„ä¼˜åŠ¿æ¥åŽ‹åˆ¶ç«åŠ¿ã€‚â€œç‰¹åˆ«æ˜¯åœ£è¯žèŠ‚å’Œæ–°å¹´æœŸé—´ï¼Œæ¶ˆé˜²å‘˜ä»¬éœ€è¦è¿›è¡Œæ›´å¤šé‡è¦å·¥ä½œï¼Œå°½å¯èƒ½æ›´å¥½åœ°ä¿æŠ¤ï¼ˆç¤¾åŒºï¼‰ã€‚â€</p>
+<p>ä»Šå¹´<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%B1%B1%E7%81%AB.md#1">å±±ç«</a>å­£ï¼Œæ–°å·žé¢ä¸´ç€å‰æ‰€æœªæœ‰çš„ä¸¥é‡æŒ‘æˆ˜ã€‚æˆªæ­¢åˆ°ç›®å‰ï¼Œå·²ç»æœ‰900æ ‹æˆ¿å±‹è¢«çƒ§æ¯ï¼Œæ•°åƒæ ‹æˆ·å¤–å»ºç­‘ç„šæ¯æˆ–å—æŸï¼Œ7äººæ­»äº¡ã€‚</p>
+<p>è¢«çƒ§æ¯çš„æž—åœ°æœ‰è®¸å¤šæ˜¯è€ƒæ‹‰çš„æ –æ¯åœ°ï¼Œæ®ä¼°è®¡å…¨æ¾³å·²ç»æœ‰2000åªè€ƒæ‹‰è‘¬èº«ç«æµ·ã€‚</p>
+<p>ä¸Šå‘¨å…­çš„é«˜æ¸©å¤§é£Žå¤©æ°”ä¸‹ï¼Œæ–°å·žåˆ›çºªå½•åœ°æ´¾å‡ºäº†1ä¸‡åæ¶ˆé˜²å‘˜ç­ç«ã€‚</p>
+<p>è²èŒ¨è¥¿è’™æ–¯è¡¨ç¤ºï¼Œæ¶ˆé˜²å‘˜ä»¬â€œç»å¯¹å·²ç»ç–²æƒ«ä¸å ªäº†â€ï¼Œä»–ä»¬æ­£åœ¨åšéžå¸¸äº†ä¸èµ·çš„å·¥ä½œã€‚â€œä»–ä»¬çš„ç–²æƒ«ä¸ä»…æ˜¯åœ¨ä½“åŠ›ä¸Šï¼Œè¿˜æœ‰æ„Ÿæƒ…ä¸Šã€‚ä½†ä»–ä»¬çŸ¥é“ä»–ä»¬çš„ç¤¾åŒºæ­£é­åˆ°å¨èƒï¼Œä»–ä»¬ä¼šå°½ä¸€åˆ‡åŠªåŠ›ã€‚â€</p>
+<p>ä¸Šå‘¨å››åˆå¤œï¼Œä¸€è¾†æ¶ˆé˜²è½¦åœ¨èµ¶å¾€ç«åœºå‰çº¿çš„è·¯ä¸Šè¢«å€’ä¸‹çš„å¤§æ ‘ç ¸ä¸­ï¼Œå¯¼è‡´ä¸¤åå¿—æ„¿æ¶ˆé˜²å‘˜å½“åœºèº«äº¡ã€‚</p>
+<p>åŠ æ‹¿å¤§å’Œç¾Žå›½çš„æ¶ˆé˜²å‘˜å·²ç»åœ¨ä¸Šå‘¨æœ«èµ¶æ¥åŠ©é˜µã€‚</p>
+<p>ç›®å‰ï¼Œæ–°å·žä»æœ‰110ä½™å¤„å±±ç«åœ¨ç‡ƒçƒ§ï¼Œå…¶ä¸­è¿‘60ä¸ªå±±ç«ç‚¹å¤„äºŽå¤±æŽ§çŠ¶æ€ã€‚</p>
+<p>è™½ç„¶æœ¬å‘¨å¤©æ°”è½¬å‡‰ï¼Œä½†ä»Žé•¿æœŸæ¥çœ‹æ–°å·žçš„æƒ…å†µå¹¶ä¸ä¹è§‚ï¼Œå› ä¸ºæ°”è±¡å±€é¢„è®¡ç›´åˆ°æ˜Žå¹´1æœˆå’Œ2æœˆå‰ï¼Œä¸ä¼šå‘ç”Ÿå¯¹ç«æƒ…æœ‰å¸®åŠ©çš„é™é›¨ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šç‘žæœ¨æ‚¦</p>
 <p>&nbsp;</p>
 
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/12/23/n11739745.htm">Ïû·ÀÔ±ÒÑÆ£±¹²»¿° Ê¥µ®½ÚÈÔÐè±³¸ºÃð»ðÖØÈÎ</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738461.htm">É½»ðÎ£»úÏÂ ×ÜÀíÌáÇ°½áÊø¶È¼Ù·µ°Ä²¢ÖÂÇ¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11736516.htm">´óÏ¤Äá»ðÏÕ´ïÔÖÄÑ¼¶±ð ÍòÃûÏû·ÀÔ±¸Ï¸°»ð³¡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11734036.htm">ÐÂÖÝÁ½Ïû·ÀÔ±¾È»ðÍ¾ÖÐÍö ×ÜÀíÖÂ°§ ÖÕÖ¹ÐÝ¼Ù</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11732466.htm">È«°Ä¸ßÎÂÔÙÆÆ¼ÍÂ¼ ÐÂÖÝÉ½»ðÓÖ»Ù40¶°·¿ÎÝ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/17/n11727296.htm">¼ÝÊÖ¶¯³µ´©Ô½ÄÁ³¡ Î÷°Ä12ËêÄÐÍ¯ÌÓ³ö»ðº£</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725188.htm">Ï¤ÄáÎ÷±±ÆðÌØ´óÉ½»ð ÊýÊ®×ù×¡Õ¬±»»Ù</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11717515.htm">×ÜÀíÐû²¼Ôö²¦1100ÍòÔªÖ§Ô®¿ÕÖÐÃð»ð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11715340.htm">ÐÂÖÝÉ½»ðÒÑ»Ù700¶àËù·¿ »òÐèÓ¦¶Ô¸ü´óËðÊ§</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/9/n11709878.htm">Íù³µÍâÈÓÑÌÍ· Ï¤ÄáÒ»ÄÐ×Ó±»·£1320°ÄÔª</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/9/n11709789.htm">ÐÂÖÝ¡°³¬¼¶ÁÖ»ð¡±¿Ö½«»áÈ¼ÉÕÊýÖÜ</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738151.htm">³¯ÏÊ»òÔÙÉäµ¼µ¯ ÃÀ·À³¤£ºÃÀ¾ü½ñÍí¾Í¿É¿ªÕ½</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733786.htm">¡¾ÄÚÄ»¡¿Ð¡Âí±¼ÌÚ·­³µ ³µ·åÍÌÊÉÊý×ÖÍõ¹ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738313.htm">ÖÐ¶í·ñ¾öUNÔ®ÖúÐðÀûÑÇ¾öÒé ÅîÅå°Â³â¿É³Ü</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11737975.htm">¡¾·­Ç½±Ø¿´¡¿ÍâÃ½£ºÖÐ¹²ÍÆÒý¶ÉÌõÀýµÄÄ»ºó¹ÊÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11716248.htm">ËïÔË­vµÄÎ´¾¹Ö®Â·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">Õ¼ÐÇ½âÎö±¡ÎõÀ´ËÀÍöÏûÏ¢ÊÇ·ñÊôÊµ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11719120.htm">°µÊÒÆÛÐÄ²»ÖªÉñÄ¿Èçµç ËûÃÇ×ªÉúÉüÐóÎª»¹Õ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725356.htm">ÎªÊ²Ã´Ëµ¡°³Ô¹ý¶¬ÖÁÌÀÔ²³¤Ò»Ëê¡±£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11736488.htm">¿Í»ú½µÏã¸ÛÔâ¾Ü ´«ÖÐ¹²¾ü»úÀ¹½ØÒªÇóÔ¶Àë°ÄÃÅ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737119.htm">´óÂ½ÎªºÎ³öÏÖ½­ºþ¡°µ×³¯Ìì¡± ×¨¼Ò½ÒÃØ£¨ÉÏ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737305.htm">ÂíÔÆÐ¶ÈÎºó ÔÚºþ±±»ñ¡°ÐÂÖ°¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/17/n11661844.htm">¡¾Ë¼ÏëÁìÐä¡¿ÄÄÐ©ÒòËØÍþÐ²ÃÀ¹úÎÄ»¯Óë·±ÈÙ£¨ÉÏ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735913.htm">¡¾ÐÂÎÅ¿´µã¡¿¾­¼Ã4´óÄÑÌâ Àî¿ËÇ¿ÔÙº°Ñ¹Á¦´ó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11734006.htm">¡¾ÅÄ°¸¾ªÆæ¡¿¿¹Õù·çÇÄÈ»±±ÉÏ Ïã¸ÛÐÇ»ð±»¶¢ÉÏ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738702.htm">¹þÐ¢Ô¶²¹°ì»éÑçÈÈÄÖ Ó­È¢¿Õ½ãÃÀ½¿Äï</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735699.htm">Íø±¬Íô·åÅóÓÑÈ¦·¢ÎÄ½ØÍ¼ Ðû²¼ÕÂ×ÓâùÆ½°²²ú×Ó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735902.htm">ÀîÓî´º³öµÀ14Äê Á½´Î±»¸¸Ç×ÒªÇóÍË³öÓéÀÖÈ¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11736552.htm">¹úÍõÆó¶ì×¡ÔÚÈÕ±¾¼ÒÍ¥Àï »á×Ô¼ºµ½ÊÐ³¡ÂòÓã</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735513.htm">IU »÷ÍËÆÓÃôÓ¢¡¶µÂÂ³ÄÉ¾Æµê¡·µÇÄê¶Èº«¾çÖ®¹Ú</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/22/n11738461.md#1">å±±ç«å±æœºä¸‹ æ€»ç†æå‰ç»“æŸåº¦å‡è¿”æ¾³å¹¶è‡´æ­‰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/21/n11736516.md#1">å¤§æ‚‰å°¼ç«é™©è¾¾ç¾éš¾çº§åˆ« ä¸‡åæ¶ˆé˜²å‘˜èµ¶èµ´ç«åœº</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/20/n11734036.md#1">æ–°å·žä¸¤æ¶ˆé˜²å‘˜æ•‘ç«é€”ä¸­äº¡ æ€»ç†è‡´å“€ ç»ˆæ­¢ä¼‘å‡</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/19/n11732466.md#1">å…¨æ¾³é«˜æ¸©å†ç ´çºªå½• æ–°å·žå±±ç«åˆæ¯40æ ‹æˆ¿å±‹</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/17/n11727296.md#1">é©¾æ‰‹åŠ¨è½¦ç©¿è¶Šç‰§åœº è¥¿æ¾³12å²ç”·ç«¥é€ƒå‡ºç«æµ·</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/16/n11725188.md#1">æ‚‰å°¼è¥¿åŒ—èµ·ç‰¹å¤§å±±ç« æ•°ååº§ä½å®…è¢«æ¯</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/12/n11717515.md#1">æ€»ç†å®£å¸ƒå¢žæ‹¨1100ä¸‡å…ƒæ”¯æ´ç©ºä¸­ç­ç«</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/11/n11715340.md#1">æ–°å·žå±±ç«å·²æ¯700å¤šæ‰€æˆ¿ æˆ–éœ€åº”å¯¹æ›´å¤§æŸå¤±</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/9/n11709878.md#1">å¾€è½¦å¤–æ‰”çƒŸå¤´ æ‚‰å°¼ä¸€ç”·å­è¢«ç½š1320æ¾³å…ƒ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/9/n11709789.md#1">æ–°å·žâ€œè¶…çº§æž—ç«â€æå°†ä¼šç‡ƒçƒ§æ•°å‘¨</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/synhl2788/djy/blob/master/gb/19/12/23/n11739745.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/synhl2788/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/synhl2788/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/synhl2788/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/6/26/n10513709.md#1">å°è¡Œæ˜Ÿåœ¨ä¿„ä¸Šç©ºçˆ†ç‚¸çŠ¶ä¼¼ç«çƒ NASAäº‹å…ˆä¸çŸ¥</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/11/n10382929.md#1" target="_blank">å…±äº§æš´æ”¿å½•ï¼šå…¬ç§åˆè¥ï¼ˆå·¥å•†æ”¹é€ ï¼‰</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/23/n10081583.md#1" target="_blank">ä¹æ—¬è€å¤ªè‡ªå·±æ´—è¡£åšé¥­ æ‰“ç ´åŒ»ç”Ÿ20å¹´å‰åˆ¤å®š</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">ã€çŽ°åœºè§†é¢‘ã€‘æ­¦æ±‰åŒ»ç”Ÿæ­ä¸­å…±å…³é—­æ–¹èˆ±å†…å¹•</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">ã€ç–«æƒ…é€è§†ã€‘æ¸¯æŠ—ç–«æ˜¾å¥‡è¿¹ å¤©ç­ä¸­å…±æˆä¿å‘½ç¬¦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943372.md#1">â€œå›žå›½é¿ç–«â€å’Œâ€œä¸­å›½å¼æ’¤ä¾¨â€çš„çœŸç›¸</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942860.md#1">ã€æœ€æ–°ç–«æƒ…3.16ã€‘æ—§é‡‘å±±åœ°åŒº700ä¸‡äººå±…å®¶é˜²ç–«</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">å¤ä»Šä¸­å¤–é¢„è¨€ä¸­çš„2020å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">ä¸­å›½ç­‰å›½ä¸ºä½•ç–«æƒ…ä¸¥é‡ï¼ŸçŠ¹å¤ªæ‹‰æ¯”ï¼šç¥žåœ¨é™¤æ¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">è—è™«ç¾¤æ”»å®˜åºœå¼‚è±¡ ä¸ºä½•åƒå°½ç”»åƒäººå¤´ï¼Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">è¢«æ‰’çš®çš„æ³•å®˜</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">èµµç«‹åšç”©é”…ç—…æ¯’æºè‡ªç¾Žå›½ è‰ºäººé»„ç§‹ç”Ÿç‹ é…¸ä¸­å…±</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">æ½˜è¿Žç´«å‘¼å¸é“æ„ŸæŸ“æ€¥å°±åŒ» è¢«è¦æ±‚æ£€æµ‹æ–°å† ç—…æ¯’</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">è¥¿ç­ç‰™ç–«æƒ…å¤§çˆ†å‘ æ¢å’çªä¸€å®¶ä¸‰å£å°åŸŽå‰è¿”æ¸¯</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">å¤å·¨åŸºå®£å¸ƒå½“çˆ¸ æ™’å®å®åˆç…§åˆ†äº«å–œæ‚¦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">åˆä¸€å¥½èŽ±åžæ˜Žæ˜Ÿç¡®è¯Š 007é‚¦å¥³éƒŽéš”ç¦»åœ¨å®¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11944883.md#1">ã€èƒ¡ä¹ƒæ–‡å¼€è®²ã€‘ç™½ç²¥æ²»å’³æŠ—æ„Ÿå†’ï¼5ç§ç¥žå¥‡é£Ÿç–—æ–¹ æ­¢å’³å¾ˆå®žç”¨</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945071.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å®˜åª’å¿™é™æ¸©ï¼Ÿèµµç«‹åšåŠäº”æ¯›è¢«æ‰“è„¸</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941189.md#1">ã€ä¸€çº¿é‡‡è®¿è§†é¢‘ç‰ˆã€‘æ­¦æ±‰å¸‚æ°‘ï¼šé¦–å…ˆè¦æ´»ä¸‹æ¥</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">å›¾è¯è—è™«å¤§å†›è‚†è™ ä¸­å…±æ€¥å®šé¢„æ¡ˆæéš¾åº”å¯¹</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘ç—…æ¯’æ¥è‡ªå“ªé‡Œï¼Ÿå·æ™®ï¼šä¸­ç¾Žéƒ½çŸ¥é“</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">ã€çŽ°åœºè§†é¢‘ã€‘ä¸œèŽžè™Žé—¨é•‡çŽ°å¤§é‡é˜²æš´è­¦å¯Ÿ</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/12/23/n11739745.htm">æ¶ˆé˜²å‘˜å·²ç–²æƒ«ä¸å ª åœ£è¯žèŠ‚ä»éœ€èƒŒè´Ÿç­ç«é‡ä»»</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/12/23/n11739745.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
